--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
@@ -15,8 +15,10 @@
     width: 100%;
     color: #FFFFFF;
   }
+  .container {
+    width: 100%;
+  }
   .text {
-    width: 54rem;
     margin: auto;
     display: block;
     font-size: 17px;
