--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -16,7 +16,7 @@
     color: #FFFFFF;
   }
   .text {
-    width: 54rem;
+    width: 100%;
     margin: auto;
     display: block;
     font-size: 17px;
