--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -46,7 +46,7 @@
              <!-- <p class="creator mb-0">Country : {{content?.region}}</p> -->
              <p class="creator mb-0"> Created Year: {{content?.year}}</p>
              <p class="creator contentlink mb-0" id="link" *ngIf="content?.link">Link : {{content?.link}}</p>
-            <div class="card-text1">{{content?.description | titlecase | slice:0:60}}<span *ngIf="content?.description && content.description?.length > 60">...</span></div>
+            <div class="">  <span class="desc1">Description: </span>   <span class="card-text1">{{content?.description | titlecase | slice:0:60}}</span>   <span *ngIf="content?.description && content.description?.length > 60">...</span></div>
             
             <div class="d-flex justify-content-center mt-30">
               <button *ngIf="(content?.status==='Draft' || content?.status=== 'DRAFT' || content?.status=== 'LIVE' || content?.status=== 'Live') && copied[content['versionKey']] && route.isActive('myassets')" type="button" class="btn text-secondary" id="style"
