--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="showQrmodal">
   <app-qr-code-modal (closeQrModal)="closeQrModalEvent($event)"></app-qr-code-modal>
 </div>
-<div class="ui bs-0 main-header d-block">
+<div class="ui menu bs-0 main-header d-block">
   <div class="ui primary-header p-10">
     <div role="banner" class="ui logo d-flex flex-ai-center row">
       <div class="ml-10">
