global.scss reverted

--- a/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
@@ -33,6 +33,7 @@ footer{
         //margin-left: 150px;
         //margin-right: 150px;
         width: 100%;
+        position: absolute;
     }
 .font{
 // font-size: 12px;
