no notification case changes

--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
@@ -72,7 +72,7 @@
 
             <div *ngIf="assetDetail?.artifactUrl && assetDetail?.mimeType === 'application/pdf'">
                 <p>
-                    File : <span (click)="navigateToplay()" class="pdfStyle">{{pdfs | titlecase | slice: 1}}pdf</span>
+                    File : <span (click)="navigateToplay()" class="pdfStyle">{{assetDetail?.artifactUrl}}</span>
                     
                 </p>
                 <!-- <p>
