--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -43,7 +43,7 @@
             <ng-template #content let-d="dismiss">
               <div class="modal-header justify-content-center">
                 <div class="py-2">
-                  <p class="fs-1-3 head">Assets Status for Review Submission</p>
+                  <p class="fs-1-3 head">Asset Notification(s)</p>
                 </div>
               </div>
               <!-- <div class="modal-body"> -->
@@ -68,7 +68,7 @@
                 </tbody>
               </table>
               <div class="fs-1-286 mb-15 mt-12 text-align-center text-danger" *ngIf="reviewAssetData.length === 0">
-                No Assets send for Review
+                No Notification Found
               </div>
               <!-- </div> -->
               <div class="mb-10 text-align-center">
