--- a/src/app/client/src/app/modules/public/module/explore/components/pdf-viewer/spacepdf-viewer.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/pdf-viewer/spacepdf-viewer.component.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-1">
+<div [appTelemetryImpression]="telemetryImpression" class="col-md-1">
     <button type="button" class="btn text-secondary ml-4" id="style"
         (click)="navigateToDetailsPage()"><i class="fa fs-2 fa-angle-left"></i></button>
 </div>
