--- a/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
+++ b/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
@@ -4,7 +4,7 @@
     <form class="ui form">
         <div class="content">
             <div *ngIf="formFieldProperties && categoryMasterList">
-                <app-update-resoure-form #formData [formFieldProperties]="formFieldProperties"
+                <app-update-resoure-form #updateform #formData [formFieldProperties]="formFieldProperties"
                     [categoryMasterList]="categoryMasterList">
                 </app-update-resoure-form>
             </div>
