--- a/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.html
+++ b/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.html
@@ -4,21 +4,32 @@
     <hr *ngIf="i===3">
     <hr *ngIf="i===4">
     <hr *ngIf="i===5">
+    <div *ngIf="field.inputType==='text' && field.code ==='name'"
+    class="required field" [ngClass]="{ 'disabled':!field.editable,'error':flagname}">
 
-    <div *ngIf="field.inputType==='text' && field.code!='creators' && field.code!='region' && field.code!='link'"
-      class="required field" [ngClass]="{ 'disabled':!field.editable}">
+    <div class="field required">
+      <label>
+        {{field.name}}
+      </label>
+      <input name={{field.code}} type={{field.inputType}} [(ngModel)]="formInputData[field.code]" id="style"
+        placeholder={{field.placeholder}}>
 
-      <div class="field required">
-        <label>
-          {{field.name}}
-        </label>
-        <input name={{field.code}} type={{field.inputType}} [(ngModel)]="formInputData[field.code]" id="style"
-          placeholder={{field.placeholder}}>
-
-      </div>
     </div>
+  </div>
+  <div *ngIf="field.inputType==='text' && field.code ==='description'"
+    class="required field" [ngClass]="{ 'disabled':!field.editable,'error':flagdescription}">
+
+    <div class="field required">
+      <label>
+        {{field.name}}
+      </label>
+      <input name={{field.code}} type={{field.inputType}} [(ngModel)]="formInputData[field.code]" id="style"
+        placeholder={{field.placeholder}}>
+
+    </div>
+  </div>
     <div *ngIf="field.inputType==='text' && field.code==='link' && formInputData['source']" class="required field"
-      [ngClass]="{ 'disabled':!field.editable}">
+      [ngClass]="{ 'disabled':!field.editable,'error':flaglink}">
 
       <div class="field required">
         <label>
@@ -31,7 +42,7 @@
     </div>
     
     <div *ngIf="field.inputType==='text' && field.code==='creators'" class="required field"
-      [ngClass]="{ 'disabled':!field.editable}">
+      [ngClass]="{ 'disabled':!field.editable,'error':flagcreators}">
 
       <div class="field required">
         <label>
@@ -55,7 +66,7 @@
       </div>
     </div> -->
     <div *ngIf="field.code!='year' && field.code==='region'" class="field required"
-    [ngClass]="{ 'disabled':!field.editable}">
+    [ngClass]="{ 'disabled':!field.editable,'error':flagregion}">
     <!-- <label>{{field.name}}</label> -->
     <div class="required field">
       <label>
@@ -77,7 +88,7 @@
             <option *ngFor="let option of countryList" [value]="option">{{option}}</option></select> -->
       </div>
     </div>
-    <div *ngIf="field.inputType==='number'" class="required field" [ngClass]="{ 'disabled':!field.editable}">
+    <div *ngIf="field.inputType==='number'" class="required field" [ngClass]="{ 'disabled':!field.editable,'error':flagversion}">
       <label>
         {{field.name}}
       </label>
@@ -96,7 +107,7 @@
       </div>
     </div>
 
-    <div *ngIf="field.inputType==='keywordsuggestion'" class="field required" [ngClass]="{ 'disabled':!field.editable}">
+    <div *ngIf="field.inputType==='keywordsuggestion'" class="field required" [ngClass]="{ 'disabled':!field.editable,'error':flagkeywords}">
       <label>
         {{field.name}}
       </label>
@@ -114,7 +125,7 @@
 
 
     <div *ngIf="field.inputType==='select' && field.code!='year' && field.code!='region'" class="field required"
-      [ngClass]="{ 'disabled':!field.editable}">
+      [ngClass]="{ 'disabled':!field.editable,'error':flagboard}">
       <!-- <label>{{field.name}}</label> -->
       <div class="required field">
         <label>
@@ -126,7 +137,7 @@
         </sui-select>
       </div>
     </div>
-    <div *ngIf="field.inputType==='multiSelect'" class="field required" [ngClass]="{ 'disabled':!field.editable}">
+    <div *ngIf="field.inputType==='multiSelect'" class="field required" [ngClass]="{ 'disabled':!field.editable,'error':flaglanguages}">
         <label>{{field.name}}</label>
         <div class="required field">
           <sui-multi-select id={{field.code}} name={{field.code}} class="selection"
@@ -136,7 +147,7 @@
           </sui-multi-select>
         </div>
       </div>
-    <div *ngIf="field.code==='year' && field.code!='region'" class="field" [ngClass]="{ 'disabled':!field.editable}">
+    <div *ngIf="field.code==='year' && field.code!='region'" class="field" [ngClass]="{ 'disabled':!field.editable, 'error':flagyear}">
       <label>{{field.name}}</label>
       <div class="field">
         <sui-select id={{field.code}} name={{field.code}} class="selection" [(ngModel)]="formInputData[field.code]">
