--- a/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
@@ -3,7 +3,7 @@
     <div class="ui twelve wide column " *ngIf="slug === 'space' && section.length > 0">
         <div class="d-flex flex-ai-center">
            
-            <button class="ui button small bs-1 mb-24 ml-auto" *ngIf="section.length >= 10 " type="button" (click)="navigateToViewAll(section)">View More</button>
+          <!--   <button class="ui button small bs-1 mb-24 ml-auto" *ngIf="section.length >= 10 " type="button" (click)="navigateToViewAll(section)">View More</button> -->
          </div>
         <div class="row">
                 <div in-view-item *ngFor="let content of section;let i = index; let last = last" class="four wide column">    
@@ -26,7 +26,7 @@
                 <div class="ui twelve wide column ">
                     <div class="d-flex flex-ai-center">
                        
-                        <button class="ui button small bs-1 mb-24 ml-auto" *ngIf="section[0]?.contents.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section)">View More</button>
+                      <!--   <button class="ui button small bs-1 mb-24 ml-auto" *ngIf="section[0]?.contents.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section)">View More</button> -->
                      </div>
                     <div class="row">
                             <div in-view-item *ngFor="let content of section[0]?.contents;let i = index; let last = last" class="four wide column">    
