--- a/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
+++ b/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
@@ -13,7 +13,7 @@
                     File : <span routerLink="play" class="pdfStyle">{{pdf | titlecase | slice: 1}}pdf</span>
                 </p> -->
                 <p>
-                   Update File : <span (click)="contentClick()" class="pdfStyle">{{pdf | titlecase | slice: 1}}pdf</span>
+                   Update File : <span (click)="contentClick()" class="pdfStyle">{{uploadedcontent}}</span>
                    <span class="editorStyle" (click)="contentClick()">- (click here)</span>
                 </p>
 
