--- a/src/app/client/src/app/modules/myassets/components/space-default-template/space-default-template.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/space-default-template/space-default-template.component.scss
@@ -16,6 +16,9 @@
     cursor: pointer;
     padding: 12px 17px !important;
 }
+::ng-deep #licencetype .ui.dropdown .menu {
+    padding:0 !important
+}
 .ui.search.dropdown {
     border: 1px solid #e4e4e4 !important;
     background: #f6f6f6;
@@ -95,4 +98,15 @@ sui-select {
     max-width: 100%;
     margin: .45238095em 0 .45238095em .64285714em;
     line-height: 0.21428571em;
+}
+.licensedropdowns{
+    width: 100%;
+}
+.type1,.type2{
+    padding-left: 40px;
+}
+
+td{
+    font-size: 12px;
+
 }
