--- a/src/app/client/src/app/modules/myassets/components/pdf-viewer/pdf-viewer.component.html
+++ b/src/app/client/src/app/modules/myassets/components/pdf-viewer/pdf-viewer.component.html
@@ -4,11 +4,13 @@
         (click)="navigateToDetailsPage()"><i class="fa fs-2 fa-angle-left"></i></button>
 </div>
 
-<div class="container mt-30" *ngIf="!showLoader ">
+<div class="container mt-30" *ngIf="!showLoader && !epub">
     <iframe [src]="assetDetail" class="pdf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen class="e2e-iframe-untrusted-src"></iframe>
 
 </div>
-
+<div class="container mt-30" *ngIf="epub">
+   <app-player [playerConfig]="playerConfig"></app-player>
+</div>
 <div class="container mt-20" *ngIf="showLoader ">
  
     <app-loader [data]="loaderMessage"></app-loader>
