--- a/src/app/client/src/app/modules/shared-feature/components/view-all/view-all.component.html
+++ b/src/app/client/src/app/modules/shared-feature/components/view-all/view-all.component.html
@@ -1,15 +1,16 @@
-<app-data-driven-filter [pageId]="'view-all'" *ngIf="filterType" [filterEnv]="filterType"
+<app-data-driven-filter [pageId]="'view-all'" *ngIf="filterType && slug !=='space'" [filterEnv]="filterType"
     [viewAllMode]="true" [accordionDefaultOpen]=false [isShowFilterLabel]=true [hashTagId]="hashTagId"
     [formAction]="formAction" [frameworkName]="frameWorkName"></app-data-driven-filter>
 <div class="ui container" [appTelemetryImpression]="telemetryImpression">
     <div class="sb-pageSection mt-24">
         <div class="sb-pageSection-header" *ngIf="!showLoader">
-            <h4 class="sb-pageSection-title m-0 mr-5">{{sectionName}}</h4>
-            <span  *ngIf="totalCount" class="sb-pageSection-count sb-label sb-label-xs sb-label-error">{{totalCount}}</span>
-            <button appTelemetryInteract [telemetryInteractEdata]="closeIntractEdata" class="sb-btn sb-btn-normal sb-btn-error ml-auto sb-cls-btn" type="button" [routerLink]="[closeUrl]">{{resourceService?.frmelmnts?.btn?.close}} <i class="close icon"></i></button>
+            <h4 *ngIf="slug !=='space'" class="sb-pageSection-title m-0 mr-5">{{sectionName}}</h4>
+            <span  *ngIf="totalCount && slug !=='space'" class="sb-pageSection-count sb-label sb-label-xs sb-label-error">{{totalCount}}</span>
+            <button *ngIf="slug !=='space'" appTelemetryInteract [telemetryInteractEdata]="closeIntractEdata" class="sb-btn sb-btn-normal sb-btn-error ml-auto sb-cls-btn" type="button" [routerLink]="[closeUrl]">{{resourceService?.frmelmnts?.btn?.close}} <i class="close icon"></i></button>
+            <button *ngIf="slug ==='space'" appTelemetryInteract [telemetryInteractEdata]="closeIntractEdata" class="sb-btn sb-btn-normal sb-btn-error ml-auto sb-cls-btn" type="button" [routerLink]="[closeUrl]">{{resourceService?.frmelmnts?.btn?.close}} <i class="fa fa-times" aria-hidden="true"></i></button>
         </div>
     </div>
-        <div class="twelve wide column" *ngIf="!showLoader && !noResult">
+        <div class="twelve wide column" *ngIf="!showLoader && !noResult && slug !=='space'">
             <div class="masonry-grid dynamic-section-card">
                 <div class="masonry-item" *ngFor="let content of searchList;let i = index;">
 
@@ -22,6 +23,20 @@
                 </div>
             </div>
         </div>
+        <div class="twelve wide column" *ngIf="!showLoader && !noResult && slug ==='space'">
+            <div class="ui grid" style="margin-left : 1rem !important">       
+            <div  *ngFor="let content of searchList;let i = index;">
+    
+                        <app-space-card *ngIf="!isOffline" appContentDirection appTelemetryInteract 
+                        [telemetryInteractEdata]="cardIntractEdata" [telemetryInteractObject]="{id:content.metaData.identifier,type:content.metaData.contentType || 'Content',ver:content.metaData.pkgVersion ? content.metaData.pkgVersion.toString():'1.0'}"
+                            (clickEvent)="playContent($event)" [data]="content" [slug]="slug"></app-space-card>
+                        
+                        <app-offline-card *ngIf="isOffline" appContentDirection appTelemetryInteract [telemetryInteractEdata]="cardIntractEdata"
+                            [telemetryInteractObject]="{id:content.metaData.identifier,type:content.metaData.contentType || 'Content',ver:content.metaData.pkgVersion ? content.metaData.pkgVersion.toString():'1.0'}" [telemetryInteractCdata]="{id:content.metaData.identifier,type:content.metaData.contentType || 'Content'}" (clickEvent)="playContent($event)" [data]="content"></app-offline-card>
+                            
+                    </div>
+                </div>
+            </div>
         <div class="twelve wide column" *ngIf="noResult && !showLoader">
             <app-no-result [data]="noResultMessage"></app-no-result>
         </div>
