--- a/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
@@ -28,7 +28,7 @@
                        
                  <button class="ui button small bs-1 mb-24 ml-auto" *ngIf="section[0]?.contents.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section[0])">View More</button>
                   </div>
-                    <div class="row">
+                    <div *ngIf="flag === false" class="row">
                             <div in-view-item *ngFor="let content of section[0]?.contents;let i = index; let last = last" class="four wide column">    
                                     <app-space-card   appTelemetryInteract 
                                     [telemetryInteractEdata]="cardIntractEdata" 
@@ -40,6 +40,18 @@
                                     class="pr-20 d-block" [class.last-card]="pr-0" *ngIf="slug === 'space'"></app-space-card>
                             </div>
                     </div>
+                    <div *ngIf="flag === true" class="row">
+                        <div in-view-item *ngFor="let content of section[0]?.contents;let i = index; let last = last" class="four wide column">    
+                                <app-space-card-loggedin   appTelemetryInteract 
+                                [telemetryInteractEdata]="cardIntractEdata" 
+                                [telemetryInteractObject]="{id:content.metaData.identifier || content.metaData.courseId,type:content.metaData.contentType || 'Course',ver:'1.0'}"
+                                (clickEvent)="playContent($event)"
+                                [data]="content" 
+                                [customClass]="'mr-20'"
+                                [slug]="slug"
+                                class="pr-20 d-block" [class.last-card]="pr-0" *ngIf="slug === 'space'"></app-space-card-loggedin>
+                        </div>
+                </div>
                 </div>
                 <!-- <div class="ui twelve wide column my-5 pageSection-Divider">
                     <div class="ui divider m-0"></div>
