making an asset without a content issue fixed and link updation now works properly

--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -54,7 +54,7 @@
                 <i class="trash large icon" style="color: #6c757d!important;"></i>
               </button>
               <div *ngIf="content?.status==='Draft'">
-                <button type="button" class="btn ml-4" id="pub" (click)="reviewConfirmModal(content.identifier, content.status); $event.stopPropagation()"><i class="fas fa-upload"></i>&nbsp; SEND FOR REVIEW</button>
+                <button type="button" class="btn ml-4" [disabled]="!!!content.artifactUrl" id="pub" (click)="reviewConfirmModal(content.identifier, content.status); $event.stopPropagation()"><i class="fas fa-upload"></i>&nbsp; SEND FOR REVIEW</button>
               </div>
               <div *ngIf="(content?.status==='Review') && route.url !== '/upForReview'">
                 <button type="button" class="btn ml-4" id="pub" disabled><i class="fas fa-upload"></i>&nbsp; SUBMITTED FOR REVIEW</button>
