--- a/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
+++ b/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
@@ -8,7 +8,20 @@
                     [categoryMasterList]="categoryMasterList">
                 </app-update-resoure-form>
             </div>
-            <div *ngIf="enabled" class="mt-10">
+            <div *ngIf="enabled && content?.mimeType === 'text/x-url'" class="mt-10">
+                <!-- <p>
+                                File : <span routerLink="play" class="pdfStyle">{{pdf | titlecase | slice: 1}}pdf</span>
+                            </p> -->
+            
+                            <div class="field required">
+                                    <label>
+                                     Link :
+                                    </label>
+                                    <input style=" border: 1px solid #e4e4e4;border-radius: 7px" name="content.name" type=text [(ngModel)]="content['artifactUrl']">
+                            
+                                  </div>
+            </div>
+            <div *ngIf="enabled && content?.mimeType !== 'text/x-url'" class="mt-10">
                 <!-- <p>
                     File : <span routerLink="play" class="pdfStyle">{{pdf | titlecase | slice: 1}}pdf</span>
                 </p> -->
@@ -62,7 +75,13 @@
                 </p>
 
             </div>
-
+           <div *ngIf="!!!content?.artifactUrl">
+                <p>
+                        <span (click)="contentClick()" class="pdfStyle">Upload</span>
+                        <span class="editorStyle" (click)="contentClick()">(click here)</span>
+                        
+                    </p>
+           </div>
         </div>
     </form>
 </div>
