viewmore-btn modified as newasset-btn

--- a/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
@@ -26,7 +26,7 @@
                 <div class="ui twelve wide column ">
                     <div class="d-flex flex-ai-center">
                        
-                 <button class="ui button small bs-1 mb-24 ml-auto" *ngIf="section[0]?.contents.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section[0])">View More</button>
+                 <button class="ui button small bs-1 mb-24 ml-auto" [ngClass]="{'resourcepagebtn': isResourcePage }" *ngIf="section[0]?.contents.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section[0])">View More</button>
                   </div>
                     <div *ngIf="flag === false" class="row">
                             <div in-view-item *ngFor="let content of section[0]?.contents;let i = index; let last = last" class="four wide column">    
