--- a/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.scss
+++ b/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.scss
@@ -6,17 +6,21 @@
   padding: 3px 6px !important;
 }
 .ui.button {
-  background: white !important;
-  color:#a8abe3;
+  background:#a8abe3 !important;
+  color:white;
+  margin-right: 3.5em;
   padding: 4px 10px !important;
-  font-weight: 500;
-  height: 25px;
+  font-weight: 700;
   box-shadow: none !important;
   white-space: nowrap;
   height: 40px;
+  width: 135px;
   font-family: "Muli",sans-serif;
   font-size: 15px;
-  border: 1px solid #a8abe3 !important;
+  border-radius: 5px;
+}
+.resourcepagebtn {
+  margin-right: 1.8em !important;
 }
 .pageSection-heading {
   font-size: 1.143rem !important;
