asset-update-page added to telemetry

--- a/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
+++ b/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5" [appTelemetryImpression]="telemetryImpression">
     <h4>Update Asset</h4>
     <hr>
     <form class="ui form">
